# resiprocate

./: build_hackathon.sh  hackathon.cxx  meson.build
resip/: meson.build
resip/dum/: meson.build
resip/dum/test/: meson.build
resip/simpledum/: meson.build  simpledum.cxx  simpledum.h
resip/stack/: meson.build
resip/stack/ssl/: Security.cxx
rutil/: meson.build
rutil/dns/ares/: meson.build
rutil/ssl/: OpenSSLInit.cxx
