libdum_sources = [
  'AppDialog.cxx',
  'AppDialogSet.cxx',
  'AppDialogSetFactory.cxx',
  'BaseCreator.cxx',
  'BaseUsage.cxx',
  'UserAuthInfo.cxx',
  'BaseSubscription.cxx',
  'ChallengeInfo.cxx',
  'ClientAuthManager.cxx',
  'ClientAuthExtension.cxx',
  'ClientInviteSession.cxx',
  'ClientOutOfDialogReq.cxx',
  'ClientPagerMessage.cxx',
  'ClientPublication.cxx',
  'ClientRegistration.cxx',
  'ClientSubscription.cxx',
  'ContactInstanceRecord.cxx',
  'DefaultServerReferHandler.cxx',
  'DestroyUsage.cxx',
  'Dialog.cxx',
  'DialogEventInfo.cxx',
  'DialogEventStateManager.cxx',
  'DialogId.cxx',
  'DialogSet.cxx',
  'DialogSetId.cxx',
  'DialogUsage.cxx',
  'DialogUsageManager.cxx',
  'DumProcessHandler.cxx',
  'DumThread.cxx',
  'DumTimeout.cxx',
  'EncryptionRequest.cxx',
  'HandleException.cxx',
  'HandleManager.cxx',
  'Handle.cxx',
  'Handled.cxx',
  'InMemoryRegistrationDatabase.cxx',
  'InMemorySyncPubDb.cxx',
  'InMemorySyncRegDb.cxx',
  'InviteSession.cxx',
  'InviteSessionCreator.cxx',
  'InviteSessionHandler.cxx',
  'MergedRequestKey.cxx',
  'NonDialogUsage.cxx',
  'OutOfDialogReqCreator.cxx',
  'PagerMessageCreator.cxx',
  'MasterProfile.cxx',
  'UserProfile.cxx',
  'Profile.cxx',
  'PublicationCreator.cxx',
  'RADIUSServerAuthManager.cxx',
  'RedirectManager.cxx',
  'RegistrationCreator.cxx',
  'RegistrationHandler.cxx',
  'ServerAuthManager.cxx',
  'ServerInviteSession.cxx',
  'ServerOutOfDialogReq.cxx',
  'ServerPagerMessage.cxx',
  'ServerPublication.cxx',
  'ServerRegistration.cxx',
  'ServerSubscription.cxx',
  'SubscriptionHandler.cxx',
  'SubscriptionCreator.cxx',
  'SubscriptionState.cxx',
  'TlsPeerAuthManager.cxx',
  'TlsPeerIdentityInfoMessage.cxx',
  'WsCookieAuthManager.cxx',
  'KeepAliveManager.cxx',
  'KeepAliveTimeout.cxx',
  'NetworkAssociation.cxx',
  'DumDecrypted.cxx',
  'CertMessage.cxx',
  'DumFeatureChain.cxx',
  'DumFeatureMessage.cxx',
  'IdentityHandler.cxx',
  'TargetCommand.cxx',
  'DumFeature.cxx',
  'OutgoingEvent.cxx',
  'HttpProvider.cxx',
  'HttpGetMessage.cxx',
  'DumHelper.cxx',
  'MergedRequestRemovalCommand.cxx',
]

libdum_headers = [
  'AppDialog.hxx',
  'AppDialogSetFactory.hxx',
  'AppDialogSet.hxx',
  'BaseCreator.hxx',
  'BaseSubscription.hxx',
  'BaseUsage.hxx',
  'CertMessage.hxx',
  'ChallengeInfo.hxx',
  'ClientAuthExtension.hxx',
  'ClientAuthManager.hxx',
  'ClientInviteSession.hxx',
  'ClientOutOfDialogReq.hxx',
  'ClientPagerMessage.hxx',
  'ClientPublication.hxx',
  'ClientRegistration.hxx',
  'ClientSubscriptionFunctor.hxx',
  'ClientSubscription.hxx',
  'ContactInstanceRecord.hxx',
  'DefaultServerReferHandler.hxx',
  'DestroyUsage.hxx',
  'DialogEventHandler.hxx',
  'DialogEventInfo.hxx',
  'DialogEventStateManager.hxx',
  'Dialog.hxx',
  'DialogId.hxx',
  'DialogSetHandler.hxx',
  'DialogSet.hxx',
  'DialogSetId.hxx',
  'DialogUsage.hxx',
  'DialogUsageManager.hxx',
  'DumCommand.hxx',
  'DumDecrypted.hxx',
  'DumException.hxx',
  'DumFeatureChain.hxx',
  'DumFeature.hxx',
  'DumFeatureMessage.hxx',
  'DumHelper.hxx',
  'DumProcessHandler.hxx',
  'DumShutdownHandler.hxx',
  'DumThread.hxx',
  'DumTimeout.hxx',
  'EncryptionRequest.hxx',
  'EventDispatcher.hxx',
  'ExternalMessageBase.hxx',
  'ExternalMessageHandler.hxx',
  'ExternalTimer.hxx',
  'Handled.hxx',
  'HandleException.hxx',
  'Handle.hxx',
  'HandleManager.hxx',
  'Handles.hxx',
  'HttpGetMessage.hxx',
  'HttpProvider.hxx',
  'IdentityHandler.hxx',
  'InMemoryRegistrationDatabase.hxx',
  'InMemorySyncPubDb.hxx',
  'InMemorySyncRegDb.hxx',
  'InviteDialogs.hxx',
  'InviteSessionCreator.hxx',
  'InviteSessionHandler.hxx',
  'InviteSession.hxx',
  'KeepAliveManager.hxx',
  'KeepAliveTimeout.hxx',
  'MasterProfile.hxx',
  'MergedRequestKey.hxx',
  'MergedRequestRemovalCommand.hxx',
  'NetworkAssociation.hxx',
  'NonDialogUsage.hxx',
  'OutgoingEvent.hxx',
  'OutOfDialogHandler.hxx',
  'OutOfDialogReqCreator.hxx',
  'PagerMessageCreator.hxx',
  'PagerMessageHandler.hxx',
  'Postable.hxx',
  'Profile.hxx',
  'PublicationCreator.hxx',
  'PublicationHandler.hxx',
  'PublicationPersistenceManager.hxx',
  'RADIUSServerAuthManager.hxx',
  'RedirectHandler.hxx',
  'RedirectManager.hxx',
  'RefCountedDestroyer.hxx',
  'RegistrationCreator.hxx',
  'RegistrationHandler.hxx',
  'RegistrationPersistenceManager.hxx',
  'RemoteCertStore.hxx',
  'RequestValidationHandler.hxx',
  'ServerAuthManager.hxx',
  'ServerInviteSession.hxx',
  'ServerOutOfDialogReq.hxx',
  'ServerPagerMessage.hxx',
  'ServerPublication.hxx',
  'ServerRegistration.hxx',
  'ServerSubscriptionFunctor.hxx',
  'ServerSubscription.hxx',
  'ssl/EncryptionManager.hxx',
  'SubscriptionCreator.hxx',
  'SubscriptionHandler.hxx',
  'SubscriptionPersistenceManager.hxx',
  'SubscriptionState.hxx',
  'TargetCommand.hxx',
  'TlsPeerAuthManager.hxx',
  'TlsPeerIdentityInfoMessage.hxx',
  'WsCookieAuthManager.hxx',
  'UsageUseException.hxx',
  'UserAuthInfo.hxx',
  'UserProfile.hxx',
]

install_headers(libdum_headers, subdir : 'resip/dum')

libdum_lib = static_library('libdum',
    libdum_sources,
    include_directories: [base_dir, include_directories('.')],
    install : true,
)

subdir('test')